# cd-collection

./: .gitignore  .pdm-python  .pdm.toml  .pre-commit-config.yaml  Dockerfile  README.md  README_pdm.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  config_version.md
data/: README_data.md  cd_info.parquet  list_cds.md
docs/: app_github.md  app_main.md
notebooks/: process-apple-music-urls.ipynb
src/: Main.py  app_config.toml  helper_functions.py  sidebar.py
src/pages/: 1_CDs_AppleMusic.py  1_💿_CD_Collection.py  9_📂_GitHub_(Source_code).py
