[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "notebook>=6.5.3",
    "isort>=5.12.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "streamlit==1.20",
    "watchdog>=2.3.1",
    "ipython>=8.11.0",
    "tomli>=2.0.1",
    "httpx>=0.23.3",
    "pre-commit>=3.2.0",
]
requires-python = ">=3.9.8"
license = {text = "MIT"}
